<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainLightFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/quiz"
        android:textSize="25sp"
        android:fontFamily="@font/sfpro"
        android:textColor="@color/black"
        android:layout_marginTop="27dp"
        android:layout_marginStart="15dp"/>

    <ImageView
        android:id="@+id/ar_tut"
        android:src="@drawable/ic_ar_tut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="89dp"/>

    <com.google.android.material.slider.Slider
        android:id="@+id/slider"
        android:layout_width="240dp"
        android:layout_height="30dp"
        app:layout_constraintStart_toStartOf="@id/txt_amount"
        app:layout_constraintTop_toBottomOf="@id/txt_amount"
        android:layout_marginTop="3dp"
        android:value="10"
        android:valueFrom="0"
        android:valueTo="20"
        android:stepSize="1"
        app:tickVisible="false"
        app:labelBehavior="gone"/>

    <TextView
        android:id="@+id/txt_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/fortxt"
        android:text="@string/questions_amount"
        app:layout_constraintTop_toBottomOf="@id/ar_tut"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="67dp"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="201dp"
        app:layout_constraintStart_toEndOf="@id/txt_amount"
        android:layout_marginStart="5dp"
        android:text="10"
        android:textSize="15sp"
        android:textColor="@color/spinner_text_color"
        android:fontFamily="@font/sfpro"/>

    <TextView
        android:id="@+id/txt_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/slider"
        app:layout_constraintStart_toStartOf="@id/slider"
        android:text="@string/category"
        style="@style/fortxt"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="5dp"
        android:id="@+id/layoutspinner1"
        app:layout_constraintTop_toBottomOf="@id/txt_category"
        app:layout_constraintStart_toStartOf="@id/txt_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_spinner">

        <Spinner
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/spinner_first"
            android:layout_width="240dp"
            android:layout_height="48dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txt_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/fortxt"
        app:layout_constraintTop_toBottomOf="@id/layoutspinner1"
        android:layout_marginTop="9dp"
        app:layout_constraintStart_toStartOf="@id/txt_category"
        android:text="@string/difficulty"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="5dp"
        android:id="@+id/layoutspinner"
        app:layout_constraintTop_toBottomOf="@id/txt_difficulty"
        app:layout_constraintStart_toStartOf="@id/txt_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_spinner">

        <Spinner
            android:id="@+id/spinner_second"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="240dp"
            android:layout_height="48dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



    <Button
        android:layout_width="200dp"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@id/layoutspinner"
        android:layout_marginTop="64dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="88dp"
        android:text="@string/start"
        android:textSize="15sp"
        android:fontFamily="@font/sfpro"
        android:background="@drawable/start_button_background"/>

</androidx.constraintlayout.widget.ConstraintLayout>